cluster/apps/ahmia-search/elastic/resources/ingress-elk.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  namespace: ahmia-search
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  rules:
    - host: elk.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: main-es-http
                port:
                  number: 9200
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kb
  namespace: ahmia-search
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  rules:
    - host: kb.skylab.fi
      http:
        paths:
          - backend:
              service:
                name: main-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
